SOLR-18382: use toList() in getAllNodeNames, inline the single-use state var